force-app/main/default/objects/Town__c/Town__c.object-meta.xml
<CustomObject>
    <description>Contains information about towns where performances are held</description>
    <label>Town</label>
    <nameField>
        <label>Town</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Towns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>