force-app/main/default/objects/Town__c/fields/Geolocation__c.field-meta.xml
<CustomField>
    <fullName>Geolocation__c</fullName>
    <label>Geolocation</label>
    <required>true</required>
    <scale>6</scale>
    <type>Location</type>
</CustomField>