force-app/main/default/objects/Town__c/fields/ProvinceName__c.field-meta.xml
<CustomField>
    <fullName>ProvinceName__c</fullName>
    <description>Displays the province name. Used in Lightning Lookup Search fields</description>
    <formula>TEXT(Province__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ProvinceName</label>
    <type>Text</type>
</CustomField>